--- a/ElmahCore.Mvc/ElmahCore.Mvc.csproj
+++ b/ElmahCore.Mvc/ElmahCore.Mvc.csproj
@@ -3,20 +3,20 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Version>1.2.5</Version>
-    <PackageProjectUrl>https://github.com/ElmahCore/ElmahCore</PackageProjectUrl>
-    <AssemblyVersion>1.2.5.0</AssemblyVersion>
-    <FileVersion>1.2.5.0</FileVersion>
+    <Version>1.3.0</Version>
+    <PackageProjectUrl>https://github.com/danielDevelops/ElmahCore</PackageProjectUrl>
+    <AssemblyVersion>1.3.0.0</AssemblyVersion>
+    <FileVersion>1.3.0.0</FileVersion>
     <AssemblyName>ElmahCore.Mvc</AssemblyName>
-    <PackageId>ElmahCore</PackageId>
-    <Authors>ElmahCore</Authors>
-    <Company>ElmahCore</Company>
+    <PackageId>Elmah.NetCore</PackageId>
+    <Authors>danielDevelops</Authors>
+    <Company>danielDevelops</Company>
     <Product>ElmahCore</Product>
     <NeutralLanguage>en-001</NeutralLanguage>
-    <RepositoryUrl>https://www.nuget.org/packages/ElmahCore</RepositoryUrl>
+    <RepositoryUrl>https://www.nuget.org/packages/danielDevelopsElmahCore</RepositoryUrl>
     <PackageTags>net-core elmah mvc-core asp-net-core asp-net-core-mvc elmah-core netcore netcore2 netcore20 mvc mvc6 aspnetcore aspnetcoremvc</PackageTags>
-    <Description>ELMAH for ASP.NET Core</Description>
-    <Copyright>ElmahCore</Copyright>
+    <Description>Elmah for ASP.NET Core based on ELMAHCore</Description>
+    <Copyright>danielDevelops</Copyright>
   </PropertyGroup>
 
   <ItemGroup>
