--- a/ElmahCore/ElmahCore.csproj
+++ b/ElmahCore/ElmahCore.csproj
@@ -2,20 +2,20 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-	  <Version>1.2.5</Version>
-	  <PackageProjectUrl>https://github.com/ElmahCore/ElmahCore</PackageProjectUrl>
-	  <AssemblyVersion>1.2.5.0</AssemblyVersion>
-	  <FileVersion>1.2.5.0</FileVersion>
+	  <Version>1.3.0</Version>
+	  <PackageProjectUrl>https://github.com/danielDevelops/ElmahCore</PackageProjectUrl>
+	  <AssemblyVersion>1.3.0.0</AssemblyVersion>
+	  <FileVersion>1.3.0.0</FileVersion>
 	  <AssemblyName>ElmahCore</AssemblyName>
-	  <PackageId>ElmahCore.Common</PackageId>
+	  <PackageId>Elmah.NetCore.Common</PackageId>
 	  <Authors>ElmahCore</Authors>
-	  <Company>ElmahCore</Company>
-	  <Product>ElmahCore</Product>
+	  <Company>danielDevelops</Company>
+	  <Product>Elmah .Net Core</Product>
 	  <NeutralLanguage>en-001</NeutralLanguage>
-	  <RepositoryUrl>https://www.nuget.org/packages/ElmahCore</RepositoryUrl>
+	  <RepositoryUrl>https://www.nuget.org/packages/danielDevelopsElmahCore</RepositoryUrl>
 	  <PackageTags>net-core elmah mvc-core asp-net-core asp-net-core-mvc elmah-core netcore netcore2 netcore20 mvc mvc6 aspnetcore aspnetcoremvc</PackageTags>
-	  <Description>ELMAH for ASP.NET Core</Description>
-	  <Copyright>ElmahCore</Copyright>
+	  <Description>Elmah for ASP.NET Core based on ElmahCore</Description>
+	  <Copyright>danielDevelops</Copyright>
 	  <RootNamespace>ElmahCore</RootNamespace>
 	  <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
